Update JDK.md